# Coworking-Booking-API

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  schemas.py
app/routers/: admin.py  auth.py  bookings.py  rooms.py
tests/: conftest.py  test_admin.py  test_auth.py  test_bookings.py  test_rooms.py
