[project]
name = "coworking"
version = "0.1.0"
description = "API for coworking booking"
authors = [{name = "Alexandr",email = "LAlex.2017@mail.ru"}]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
PyJWT = "^2.8.0"
bcrypt = "^4.1.0"
python-multipart = "^0.0.9"
pydantic = "^2.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.26.0"


[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"
test = "pytest:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"


